--- a/index.html
+++ b/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.5.1.js"></script>
+  <script src="js/scripts.js"></script>
+
   <title>Document</title>
 </head>
+
 <body>
-  <a></a>
+  <div class="container">
+    <div class="jumbotron">
+      <h1 class="display-4">Voting Information</h1>
+    </div>
+    <form id="ageinput">
+      <div class="form-control-sm">
+        <label for="userage">Your Age</label>
+        <input type="number" class="form-control" id="userage" placeholder="Your Age." min="1">
+        <br>
+        <button class="btn btn-primary" id="ageinput" type="submit" form="ageinput">Submit</button>
+      </div>
+
+    </form>
+
+    <div id="canVote">
+      <h2>Welcome Voter</h2>
+      <h5>Here are some website for voting information</h5>
+      <ul>
+        <li><a href="https://www.usa.gov/register-to-vote">Register to vote.</a> </li>
+        <li><a href="https://www.vote.org/polling-place-locator/">Find polling location</a> </li>
+        <li><a href="https://www.usa.gov/midterm-state-and-local-elections">Upcoming Elections</a> </li>
+      </ul>
+    </div>
+    <div id="cantVote">
+      <h2>Sorry you are to young to vote.</h2>
+      <h5>Here is some information about the voting process.</h5>
+      <ul>
+        <li><a href="https://www.usa.gov/election">Presidential Election Information</a></li>
+        <li><a href="https://votesmart.org/education/elections">General Government Info</a></li>
+        <li><a href="https://www.usa.gov/voter-registration-age-requirements">Voting Age Requirements</a></li>
+      </ul>
+    </div>
+
+  </div>
+
 </body>
+
 </html>
